Make writing e2e tests less repetitive (#10266)
* WIP

* WIP

* WIP refactor MLA tests, it compiles again

* improve logging in project jig

* remember to cleanup broken clusters

* try to move some configuration closer to where it's sourced

* make MLA tests headless

* where we're going, we don't need an SSH agent

* collect logs into artifacts during MLA tests

* improve CLI flags

* make addon installation easier

* make it easier to use presets

* ensure we download the gocache early, remove needless trap

* fix applying presets

* comparing these structs is more difficult than i thought

* make retries for machine creation more likely to actually happen

* fix cilium

* remove now unused helpers

* configure just a -datacenter and let the jig figure out provider settings based on that

* add missing flags file

* fix typo

* fix cilium tests

* refactor konnectivity tests

* enable headless

* fix a lot of typos

* rewrite OPA tests

* scheme

* allow to transparently configure an exising -project for tests

* refactor expose-strategy tests

* define easy to use presets

* fix typo

* refactor etcd-launcher tests

* remove unused presets

* fix tpyo

* appease linter

--- a/hack/ci/testdata/kubermatic_konnectivity.yaml
+++ b/hack/ci/testdata/kubermatic_konnectivity.yaml
@@ -19,20 +19,14 @@ metadata:
   namespace: kubermatic
 spec:
   ingress:
+    # Even though no ingress will be created (due to the HeadlessInstallation
+    # feature gate), we still need the base domain to construct the URLs to
+    # the usercluster kube-apiserver. This traffic however is never routed
+    # through nginx.
     domain: '__KUBERMATIC_DOMAIN__'
-    disable: true
   imagePullSecret: '__IMAGE_PULL_SECRET__'
   userCluster:
     apiserverReplicas: 1
-  api:
-    replicas: 1
-    debugLog: true
   featureGates:
     KonnectivityService: true
-  ui:
-    replicas: 0
-  # Dex integration
-  auth:
-    tokenIssuer: "http://dex.oauth:5556/dex"
-    issuerRedirectURL: "http://localhost:8000"
-    serviceAccountKey: "__SERVICE_ACCOUNT_KEY__"
+    HeadlessInstallation: true
