--- a/hack/ci/testdata/openldap.yaml
+++ b/hack/ci/testdata/openldap.yaml
@@ -66,31 +66,50 @@ metadata:
   namespace: ldap
 data:
   config-ldap.ldif: |
-    dn: ou=People,dc=kubermatic,dc=com
+    # Already included in default config of Docker image osixia/openldap:1.4.0.
+    #
+    # dn: dc=example,dc=org
+    # objectClass: dcObject
+    # objectClass: organization
+    # o: Example Company
+    # dc: example
+
+    dn: ou=People,dc=example,dc=org
     objectClass: organizationalUnit
     ou: People
 
-    dn: cn=jane,ou=People,dc=kubermatic,dc=com
+    dn: cn=jane,ou=People,dc=example,dc=org
     objectClass: person
     objectClass: inetOrgPerson
     sn: doe
     cn: jane
-    mail: janedoe@kubermatic.com
-    userpassword: passw0rd
+    mail: janedoe@example.com
+    userpassword: foo
 
-    dn: ou=Groups,dc=kubermatic,dc=com
+    dn: cn=john,ou=People,dc=example,dc=org
+    objectClass: person
+    objectClass: inetOrgPerson
+    sn: doe
+    cn: john
+    mail: johndoe@example.com
+    userpassword: bar
+
+    # Group definitions.
+
+    dn: ou=Groups,dc=example,dc=org
     objectClass: organizationalUnit
     ou: Groups
 
-    dn: cn=admins,ou=Groups,dc=kubermatic,dc=com
+    dn: cn=admins,ou=Groups,dc=example,dc=org
     objectClass: groupOfNames
     cn: admins
-    member: cn=jane,ou=People,dc=kubermatic,dc=com
+    member: cn=john,ou=People,dc=example,dc=org
+    member: cn=jane,ou=People,dc=example,dc=org
 
-    dn: cn=developers,ou=Groups,dc=kubermatic,dc=com
+    dn: cn=developers,ou=Groups,dc=example,dc=org
     objectClass: groupOfNames
     cn: developers
-    member: cn=jane,ou=People,dc=kubermatic,dc=com
+    member: cn=jane,ou=People,dc=example,dc=org
 
 ---
 apiVersion: v1
