application: add integration tests for helm source
Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/pkg/applications/helmclient/testdata/examplechart/templates/configmap.yaml
+++ b/pkg/applications/helmclient/testdata/examplechart/templates/configmap.yaml
@@ -12,12 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Default values for examplechart.
-# This is a YAML-formatted file.
-# Declare name/value pairs to be passed into your templates.
-# name: value
-
-cmData:
-  foo: bar
-
-versionLabel: "1.0"
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: testcm
+  labels:
+{{ if .Values.versionLabel }}
+    versionLabel: {{ .Values.versionLabel | quote}}
+{{ end }}
+data:
+{{ if .Values.cmData }}
+{{ toYaml .Values.cmData | nindent 2 }}
+{{ end }}
