--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -368,6 +368,11 @@ spec:
                     - sshReference
                     type: object
                   providerName:
+                    enum:
+                    - gke
+                    - aks
+                    - eks
+                    - kubeone
                     type: string
                 required:
                 - providerName
