--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -89,6 +89,7 @@ spec:
       country: DE
       spec:
         vsphere:
+          cluster: ''
           datacenter: Hamburg
           datastore: alpha1
           endpoint: https://vcenter.dc.k8c.io
