--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -19,6 +19,15 @@ spec:
     - jsonPath: .spec.humanReadableName
       name: HumanReadableName
       type: string
+    - jsonPath: .spec.cloud.providerName
+      name: Provider
+      type: string
+    - jsonPath: .spec.pause
+      name: Paused
+      type: boolean
+    - jsonPath: .status.condition.phase
+      name: Phase
+      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
@@ -358,6 +367,15 @@ spec:
                     - providerName
                     - sshReference
                     type: object
+                  providerName:
+                    enum:
+                    - gke
+                    - aks
+                    - eks
+                    - kubeone
+                    type: string
+                required:
+                - providerName
                 type: object
               humanReadableName:
                 description: HumanReadableName is the cluster name provided by the
