fix JSONPath in ExternalCluster CRD

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -19,7 +19,7 @@ spec:
     - jsonPath: .spec.humanReadableName
       name: HumanReadableName
       type: string
-    - jsonPath: .spec.cloud.providerName
+    - jsonPath: .spec.cloudSpec.providerName
       name: Provider
       type: string
     - jsonPath: .spec.pause
