--- a/pkg/resources/test/fixtures/deployment-aws-1.23.5-usercluster-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.23.5-usercluster-controller.yaml
@@ -52,6 +52,22 @@ spec:
           value: aws-assume-role-arn
         - name: AWS_ASSUME_ROLE_EXTERNAL_ID
           value: aws-assume-role-external-id
+        - name: HTTP_PROXY
+          value: http://my-corp
+        - name: HTTPS_PROXY
+          value: http://my-corp
+        - name: http_proxy
+          value: http://my-corp
+        - name: https_proxy
+          value: http://my-corp
+        - name: NO_PROXY
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: no_proxy
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NAMESPACE
           valueFrom:
             fieldRef:
