--- a/pkg/resources/test/fixtures/deployment-bringyourown-1.23.5-usercluster-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-bringyourown-1.23.5-usercluster-webhook.yaml
@@ -31,6 +31,23 @@ spec:
         - -v=2
         command:
         - user-cluster-webhook
+        env:
+        - name: HTTP_PROXY
+          value: http://my-corp
+        - name: HTTPS_PROXY
+          value: http://my-corp
+        - name: http_proxy
+          value: http://my-corp
+        - name: https_proxy
+          value: http://my-corp
+        - name: NO_PROXY
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: no_proxy
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         image: quay.io/kubermatic/kubermatic:v0.0.0-test
         name: usercluster-controller
         ports:
