--- a/pkg/resources/test/fixtures/deployment-openstack-1.23.5-usercluster-controller-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.23.5-usercluster-controller-externalCloudProvider.yaml
@@ -57,7 +57,22 @@ spec:
         - name: OS_PROJECT_ID
         - name: OS_APPLICATION_CREDENTIAL_ID
         - name: OS_APPLICATION_CREDENTIAL_SECRET
-        - name: OS_TOKEN
+        - name: HTTP_PROXY
+          value: http://my-corp
+        - name: HTTPS_PROXY
+          value: http://my-corp
+        - name: http_proxy
+          value: http://my-corp
+        - name: https_proxy
+          value: http://my-corp
+        - name: NO_PROXY
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: no_proxy
+          value: apiserver-external.cluster-de-test-01.svc.cluster.local.
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NAMESPACE
           valueFrom:
             fieldRef:
