enable dev mode in CI

--- a/hack/ci/testdata/kubermatic.yaml
+++ b/hack/ci/testdata/kubermatic.yaml
@@ -31,6 +31,7 @@ spec:
     # VPA won't do anything useful due to missing Prometheus, but we can
     # at least ensure we deploy a working set of Deployments.
     VerticalPodAutoscaler: true
+    DevelopmentEnvironment: true
     OperatingSystemManager: __KUBERMATIC_OSM_ENABLED__
   ui:
     replicas: 0
