--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -424,7 +424,7 @@ spec:
                 type: array
               helmRelease:
                 description: HelmRelease holds the information about the helm release
-                  installed by this application. This field is only fill if template
+                  installed by this application. This field is only filled if template
                   method is 'helm'.
                 properties:
                   info:
