Adding datacenter-level "IPv6 enabled" switch for VSphere

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -517,6 +517,10 @@ spec:
                                 username:
                                   type: string
                               type: object
+                            ipv6Enabled:
+                              description: 'Optional: defines if the IPv6 is enabled
+                                for the datacenter'
+                              type: boolean
                             rootPath:
                               description: 'Optional: The root path for cluster specific
                                 VM folders. Each cluster gets its own folder below
