re-configure IPAddresspool and rearrange addon files

--- a/addons/metallb/20_metallb-config.yaml
+++ b/addons/metallb/20_metallb-config.yaml
@@ -17,3 +17,8 @@ spec:
     {{- end }}
   {{- end }}
 {{- end }}
+
+{{- if .Variables.addressPoolYaml }}
+---
+{{ .Variables.addressPoolYaml }}
+{{- end }}
