--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -93,6 +93,7 @@ spec:
           datacenter: Hamburg
           datastore: alpha1
           endpoint: https://vcenter.dc.k8c.io
+          ipv6Enabled: true
           rootPath: /Hamburg/vm/Kubermatic-dev
           templates:
             centos: centos-7
