gitSource: when clonning from a commit, the branch of the commit must be specified
Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationinstallations.yaml
@@ -282,10 +282,9 @@ spec:
                                       to reduce the amount of data to download.
                                     type: string
                                   commit:
-                                    description: "Commit SHA to checkout. \n It can
-                                      be used in conjunction with branch to to avoid
-                                      to clone the all repository. The commit must
-                                      belong to this branch."
+                                    description: "Commit SHA in a Branch to checkout.
+                                      \n It must be used in conjunction with branch
+                                      field."
                                     pattern: ^[a-f0-9]{40}$
                                     type: string
                                   tag:
