--- a/.prow/provider-nutanix.yaml
+++ b/.prow/provider-nutanix.yaml
@@ -35,8 +35,8 @@ presubmits:
           env:
             - name: KUBERMATIC_EDITION
               value: ee
-            - name: VERSIONS_TO_TEST
-              value: "v1.24.2"
+            - name: RELEASES_TO_TEST
+              value: "1.24"
             - name: PROVIDER
               value: "nutanix"
             - name: DISTRIBUTIONS
@@ -80,8 +80,8 @@ presubmits:
           env:
             - name: KUBERMATIC_EDITION
               value: ee
-            - name: VERSIONS_TO_TEST
-              value: "v1.24.2"
+            - name: RELEASES_TO_TEST
+              value: "1.24"
             - name: PROVIDER
               value: "nutanix"
             - name: DISTRIBUTIONS
