Add MetalLB addon integrated with multi-cluster IPAM. (#10426)
* addig the metallb addon

* re-configure IPAddresspool and rearrange addon files

* add metallb to default addon

* added copyright header, rename files and update docs

* added L2Advertisement

* added sources for metallb addon and extended the makefile

* run changes

* fix some space issues

* added new suggestions for updating manifest

--- a/addons/Makefile
+++ b/addons/Makefile
@@ -46,3 +46,10 @@ aws-node-termination-handler:
 	  >> $(OUTPUT_FILE)
 	cat aws-node-termination-handler/_footer.txt >> $(OUTPUT_FILE)
 	sed -i 's/public.ecr.aws/{{ Registry "public.ecr.aws" }}/g' $(OUTPUT_FILE)
+
+.PHONY: metallb
+metallb: OUTPUT_FILE=metallb/00_metallb.yaml
+metallb:
+	cat metallb/_header.txt > $(OUTPUT_FILE)
+	wget -q -O- https://raw.githubusercontent.com/metallb/metallb/v0.13.3/config/manifests/metallb-native.yaml >> $(OUTPUT_FILE)
+	sed -i 's/quay.io/{{ Registry "quay.io" }}/g' $(OUTPUT_FILE)	
