--- a/pkg/resources/test/fixtures/deployment-azure-1.23.5-operating-system-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.23.5-operating-system-manager-externalCloudProvider.yaml
@@ -40,13 +40,25 @@ spec:
         - /http-prober-bin/http-prober
         env:
         - name: AZURE_CLIENT_ID
-          value: az-client-id
+          valueFrom:
+            secretKeyRef:
+              key: clientID
+              name: cloud-credentials
         - name: AZURE_CLIENT_SECRET
-          value: az-client-secret
+          valueFrom:
+            secretKeyRef:
+              key: clientSecret
+              name: cloud-credentials
         - name: AZURE_TENANT_ID
-          value: az-tenant-id
+          valueFrom:
+            secretKeyRef:
+              key: tenantID
+              name: cloud-credentials
         - name: AZURE_SUBSCRIPTION_ID
-          value: az-subscription-id
+          valueFrom:
+            secretKeyRef:
+              key: subscriptionID
+              name: cloud-credentials
         image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb
         livenessProbe:
           failureThreshold: 3
