--- a/pkg/resources/test/fixtures/deployment-openstack-1.22.1-operating-system-manager.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.22.1-operating-system-manager.yaml
@@ -42,16 +42,44 @@ spec:
         - name: OS_AUTH_URL
           value: https://example.com:8000/v3
         - name: OS_USER_NAME
-          value: openstack-username
+          valueFrom:
+            secretKeyRef:
+              key: username
+              name: cloud-credentials
         - name: OS_PASSWORD
-          value: openstack-password
+          valueFrom:
+            secretKeyRef:
+              key: password
+              name: cloud-credentials
         - name: OS_DOMAIN_NAME
-          value: openstack-domain
+          valueFrom:
+            secretKeyRef:
+              key: domain
+              name: cloud-credentials
         - name: OS_PROJECT_NAME
-          value: openstack-project
+          valueFrom:
+            secretKeyRef:
+              key: project
+              name: cloud-credentials
+              optional: true
         - name: OS_PROJECT_ID
+          valueFrom:
+            secretKeyRef:
+              key: projectID
+              name: cloud-credentials
+              optional: true
         - name: OS_APPLICATION_CREDENTIAL_ID
+          valueFrom:
+            secretKeyRef:
+              key: applicationCredentialID
+              name: cloud-credentials
+              optional: true
         - name: OS_APPLICATION_CREDENTIAL_SECRET
+          valueFrom:
+            secretKeyRef:
+              key: applicationCredentialSecret
+              name: cloud-credentials
+              optional: true
         image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb
         livenessProbe:
           failureThreshold: 3
