--- a/pkg/resources/test/fixtures/deployment-aws-1.23.5-machine-controller-webhook.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.23.5-machine-controller-webhook.yaml
@@ -71,7 +71,7 @@ spec:
               fieldPath: metadata.namespace
         - name: PROBER_KUBECONFIG
           value: /etc/kubernetes/worker-kubeconfig/kubeconfig
-        image: quay.io/kubermatic/machine-controller:6232612e8ee6fc53c20a125415f8764fd4e81517
+        image: quay.io/kubermatic/machine-controller:v1.53.0
         livenessProbe:
           failureThreshold: 8
           httpGet:
