--- a/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-operating-system-manager.yaml
+++ b/pkg/resources/test/fixtures/deployment-digitalocean-1.22.1-operating-system-manager.yaml
@@ -38,7 +38,7 @@ spec:
         - '{"command":"/usr/local/bin/osm-controller","args":["-worker-cluster-kubeconfig","/etc/kubernetes/worker-kubeconfig/kubeconfig","-cluster-dns","169.254.20.10","-health-probe-address","0.0.0.0:8085","-metrics-address","0.0.0.0:8080","-namespace","cluster-de-test-01"]}'
         command:
         - /http-prober-bin/http-prober
-        image: quay.io/kubermatic/operating-system-manager:952f1cd42007d6770b8e2805b0e18247377b14bb
+        image: quay.io/kubermatic/operating-system-manager:v0.6.0
         livenessProbe:
           failureThreshold: 3
           httpGet:
