allow to disable individual tests in conformance-tester instead of just all or nothing

--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -161,8 +161,8 @@ presubmits:
           env:
             - name: KUBERMATIC_EDITION
               value: "ce"
-            - name: ONLY_TEST_CREATION
-              value: "true"
+            - name: EXCLUDE_TESTS
+              value: "conformance"
             - name: RELEASES_TO_TEST
               value: "1.24"
             - name: DISTRIBUTIONS
