--- a/charts/monitoring/prometheus/rules/general-kube-state-metrics.yaml
+++ b/charts/monitoring/prometheus/rules/general-kube-state-metrics.yaml
@@ -67,7 +67,7 @@ groups:
         annotations:
           message: Pod {{ $labels.namespace }}/{{ $labels.pod }} ({{ $labels.container }}) is restarting {{ printf "%.2f" $value }} times / 5 minutes.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubepodcrashlooping
-        expr: rate(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[15m]) * 60 * 5 > 0
+        expr: max_over_time(kube_pod_container_status_waiting_reason{reason="CrashLoopBackOff", job="kube-state-metrics"}[5m]) >= 1
         for: 1h
         labels:
           severity: critical
@@ -76,7 +76,14 @@ groups:
         annotations:
           message: Pod {{ $labels.namespace }}/{{ $labels.pod }} has been in a non-ready state for longer than an hour.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubepodnotready
-        expr: sum by (namespace, pod) (kube_pod_status_phase{job="kube-state-metrics", phase=~"Pending|Unknown"}) > 0
+        expr: |
+          sum by (namespace, pod, cluster) (
+          max by(namespace, pod, cluster) (
+          kube_pod_status_phase{job="kube-state-metrics", phase=~"Pending|Unknown"}
+          ) * on(namespace, pod, cluster) group_left(owner_kind) topk by(namespace, pod, cluster) (
+          1, max by(namespace, pod, owner_kind, cluster) (kube_pod_owner{owner_kind!="Job"})
+          )
+          ) > 0
         for: 30m
         labels:
           severity: critical
@@ -98,24 +105,36 @@ groups:
           message: Deployment {{ $labels.namespace }}/{{ $labels.deployment }} has not matched the expected number of replicas for longer than an hour.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubedeploymentreplicasmismatch
         expr: |
-          kube_deployment_spec_replicas{job="kube-state-metrics"}
-            !=
-          kube_deployment_status_replicas_available{job="kube-state-metrics"}
+          (
+           kube_deployment_spec_replicas{job="kube-state-metrics"}
+          >
+           kube_deployment_status_replicas_available{job="kube-state-metrics"}
+          ) and (
+            changes(kube_deployment_status_replicas_updated{job="kube-state-metrics"}[10m])
+              ==
+            0
+          )
         for: 1h
         labels:
-          severity: critical
+          severity: warning
           resource: "{{ $labels.namespace }}/{{ $labels.deployment }}"
       - alert: KubeStatefulSetReplicasMismatch
         annotations:
           message: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} has not matched the expected number of replicas for longer than 15 minutes.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubestatefulsetreplicasmismatch
         expr: |
-          kube_statefulset_status_replicas_ready{job="kube-state-metrics"}
+          (
+           kube_statefulset_status_replicas_ready{job="kube-state-metrics"}
             !=
-          kube_statefulset_status_replicas{job="kube-state-metrics"}
+           kube_statefulset_status_replicas{job="kube-state-metrics"}
+          ) and (
+            changes(kube_statefulset_status_replicas_updated{job="kube-state-metrics"}[10m])
+              ==
+            0
+          )
         for: 15m
         labels:
-          severity: critical
+          severity: warning
           resource: "{{ $labels.namespace }}/{{ $labels.statefulset }}"
       - alert: KubeStatefulSetGenerationMismatch
         annotations:
@@ -134,32 +153,58 @@ groups:
           message: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} update has not been rolled out.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubestatefulsetupdatenotrolledout
         expr: |
-          max without (revision) (
-            kube_statefulset_status_current_revision{job="kube-state-metrics"}
-              unless
-            kube_statefulset_status_update_revision{job="kube-state-metrics"}
-          )
-            *
           (
-            kube_statefulset_replicas{job="kube-state-metrics"}
-              !=
-            kube_statefulset_status_replicas_updated{job="kube-state-metrics"}
-          )
+           max without (revision) (
+             kube_statefulset_status_current_revision{job="kube-state-metrics"}
+               unless
+             kube_statefulset_status_update_revision{job="kube-state-metrics"}
+           )
+            *
+           (
+             kube_statefulset_replicas{job="kube-state-metrics"}
+               !=
+             kube_statefulset_status_replicas_updated{job="kube-state-metrics"}
+           )
+          )  and (
+           changes(kube_statefulset_status_replicas_updated{job="kube-state-metrics"}[5m])
+             ==
+           0
+      
         for: 15m
         labels:
-          severity: critical
+          severity: warning
           resource: "{{ $labels.namespace }}/{{ $labels.statefulset }}"
       - alert: KubeDaemonSetRolloutStuck
         annotations:
           message: Only {{ $value }}% of the desired Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset }} are scheduled and ready.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubedaemonsetrolloutstuck
         expr: |
-          kube_daemonset_status_number_ready{job="kube-state-metrics"}
-            /
-          kube_daemonset_status_desired_number_scheduled{job="kube-state-metrics"} * 100 < 100
+          (
+           (
+            kube_daemonset_status_current_number_scheduled{job="kube-state-metrics"}
+             !=
+            kube_daemonset_status_desired_number_scheduled{job="kube-state-metrics"}
+           ) or (
+             kube_daemonset_status_number_misscheduled{job="kube-state-metrics"}
+              !=
+             0
+          ) or (
+            kube_daemonset_status_updated_number_scheduled{job="kube-state-metrics"}
+             !=
+            kube_daemonset_status_desired_number_scheduled{job="kube-state-metrics"}
+          ) or (
+            kube_daemonset_status_number_available{job="kube-state-metrics"}
+             !=
+            kube_daemonset_status_desired_number_scheduled{job="kube-state-metrics"}
+          )
+         ) and (
+           changes(kube_daemonset_status_updated_number_scheduled{job="kube-state-metrics"}[5m])
+            ==
+           0
+         )
         for: 15m
         labels:
-          severity: critical
+          severity: warning
           resource: "{{ $labels.namespace }}/{{ $labels.daemonset }}"
       - alert: KubeDaemonSetNotScheduled
         annotations:
@@ -195,7 +240,10 @@ groups:
         annotations:
           message: Job {{ $labels.namespace }}/{{ $labels.job_name }} is taking more than one hour to complete.
           runbook_url: https://docs.kubermatic.com/kubermatic/master/cheat_sheets/alerting_runbook/#alert-kubejobcompletion
-        expr: kube_job_spec_completions{job="kube-state-metrics"} - kube_job_status_succeeded{job="kube-state-metrics"} > 0
+        expr:  |
+          time() - max by(namespace, job_name, cluster) (kube_job_status_start_time{job="kube-state-metrics"}
+            and
+          kube_job_status_active{job="kube-state-metrics"} > 0) > 43200
         for: 1h
         labels:
           severity: warning
@@ -310,3 +358,23 @@ groups:
         labels:
           severity: warning
           resource: '{{ $labels.node }}'
+      - alert: KubeNodeUnreachable
+        annotations:
+          message: {{ $labels.node }} is unreachable and some workloads may be rescheduled.
+          runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubenodeunreachable
+          summary: Node is unreachable.
+        expr: |
+          (kube_node_spec_taint{job="kube-state-metrics",key="node.kubernetes.io/unreachable",effect="NoSchedule"} unless ignoring(key,value) kube_node_spec_taint{job="kube-state-metrics",key=~"ToBeDeletedByClusterAutoscaler|cloud.google.com/impending-node-termination|aws-node-termination-handler/spot-itn"}) == 1
+        for: 15m
+        labels
+          severity: warning
+      - alert: KubeNodeReadinessFlapping
+        annotations:
+          message: The readiness status of node {{ $labels.node }} has changed {{ $value }} times in the last 15 minutes.
+          runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubenodereadinessflapping
+          summary: Node readiness status is flapping.
+        expr: |
+          sum(changes(kube_node_status_condition{status="true",condition="Ready"}[15m])) by (cluster, node) > 2
+        for: 15m
+        labels:
+          severity: warning
