--- a/.prow/provider-packet.yaml
+++ b/.prow/provider-packet.yaml
@@ -39,6 +39,8 @@ presubmits:
               value: "packet"
             - name: DISTRIBUTIONS
               value: ubuntu
+            - name: SETUP_MODE
+              value: "kube"
             - name: SERVICE_ACCOUNT_KEY
               valueFrom:
                 secretKeyRef:
